Fix message input invisible on phone (attempt)

--- a/client/src/components/ImageMessage/ImageMessage.module.scss
+++ b/client/src/components/ImageMessage/ImageMessage.module.scss
@@ -4,7 +4,7 @@
 .imageMessage {
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.39);
