--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -9,7 +9,7 @@ body {
   background: var(--chat-background-color);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   * {
     box-sizing: border-box;
